# pdf-strikethrough-detect

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: failing-page.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  _corpus.py  _scanned.py  confirmation_rate.py  di_parity.py  fetch_corpus.py  manifest.json  ocr_backend_table.py  prep_scanned_di.py  scanned_recovery.py
demo/: README.md  app.py  requirements.txt
examples/: README.md  native_quickstart.py  overlay_quickstart.py  rag_provenance.py  scanned_quickstart.py
src/pdf_strikethrough/: __init__.py  __main__.py  _batch.py  active.py  calibration.py  cnn.py  detect.py  docx.py  lines.py  markdown.py  native.py  ocr.py  overlay.py  scanned.py  strike_verdict_cnn.meta.json  strike_verdict_cnn.onnx  types.py
tests/: test_beyond_pdfs.py  test_prove_it.py  test_scale_armor.py  test_smoke.py
tools/: export_model.py
training/: MODEL_CARD.md  README.md  train_strikenet.py
